--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "deploy": "netlify deploy --prod"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "serverless-http": "^3.2.0",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "cors": "^2.8.5"
+    "pg": "^8.16.2",
+    "serverless-http": "^3.2.0"
   },
   "devDependencies": {
     "netlify-cli": "^17.0.0"
@@ -30,4 +31,4 @@
   "engines": {
     "node": ">=18.0.0"
   }
-} 
+}
